src/objects/Organization_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Applet_Jar_Development_Location__c</fullName>
        <inlineHelpText>This Field Stored URL for Biometric JAR files used for development &amp; testing purpose.</inlineHelpText>
        <label>Applet Jar Development Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applet_Jars_Location__c</fullName>
        <label>Applet Jars Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Biometric_DB_Connection__c</fullName>
        <label>Biometric DB Connection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Check_Teller_Balance_before_EOD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Teller Balance before EOD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <defaultValue>&quot;India&quot;</defaultValue>
        <description>MFI Country Name</description>
        <inlineHelpText>MFI Country Name</inlineHelpText>
        <label>Country</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Biometric_Development_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Biometric Development Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Griaule_Biometrics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Griaule Biometrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_M2SYS_Biometrics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable M2SYS Biometrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Teller_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Teller Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <inlineHelpText>Sacco Organization Id</inlineHelpText>
        <label>Org_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_Account_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Account History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Track_Client_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Client History</label>
        <type>Checkbox</type>
    </fields>
    <label>Organization Parameters</label>
</CustomObject>